--- a/ch4/CMakeLists.txt
+++ b/ch4/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(vector vector.cpp)
 add_executable(algorithms algorithms.cpp)
+add_executable(up_down_cast_example up_down_cast_example.cpp)
