--- a/Effective_C++/CMakeLists.txt
+++ b/Effective_C++/CMakeLists.txt
@@ -8,3 +8,7 @@ add_executable(effective6 effective6.cpp)
 add_executable(effective7 effective7.cpp)
 add_executable(effective8 effective8.cpp)
 add_executable(effective9 effective9.cpp)
+add_executable(effective10 effective10.cpp)
+add_executable(effective11 effective11.cpp)
+add_executable(effective12 effective12.cpp)
+add_executable(effective13 effective13.cpp)
